# example-code

./: CMakeLists.txt
src/1.test_malloc/: main.cpp
src/10.array_manipulation/: CMakeLists.txt  main.cpp
src/11.sort_with_paste/: main.cpp
src/12.udev_stats/: CMakeLists.txt  main.cpp
src/13.sse3-sse4-instruct/: CMakeLists.txt  main.cpp
src/2.example_omp_array/: CMakeLists.txt  example_prc.cpp  main.cpp
src/3.opencl_test/: CMakeLists.txt  main.cpp
src/4.get_radix_n/: fgetradix.cpp
src/5.funts/: funts.dia  main.cpp
src/6.sqrt_var/: main.cpp
src/7.get_uid/: main.cpp
src/9.getopt/: main.cpp
src/check_is/: main.cpp
src/example_omp_array/: example_prc.cpp
src/funts/: main.cpp
src/get_radix_n/: fgetradix.cpp
src/get_uid/: main.cpp
src/opencl_test/: main.cpp
src/sqrt_var/: main.cpp
src/test_malloc/: main.cpp
